--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -12,7 +12,7 @@
 
     <div class="center-box">
 
-        <a href="{{ path('task_create') }}" class="btn btn-success home-task-button">Nouvelle tâche</a>
+        <a href="{{ path('task_create') }}" class="btn btn-special-success home-task-button">Nouvelle tâche</a>
 
         <a href="{{ path('task_list') }}" class="btn btn-primary home-task-button">Liste des tâches</a>
 
