--- a/templates/user/create.html.twig
+++ b/templates/user/create.html.twig
@@ -12,7 +12,7 @@
 
 {% block body %}
 
-    <div class="row center-box">
+    <div class="row center-box special-editor">
 
         {{ form_start(form, {'action' : path('user_create')}) }}
 
