--- a/templates/task/edit.html.twig
+++ b/templates/task/edit.html.twig
@@ -2,11 +2,17 @@
 
 {% block title %}Modifier une tâche{% endblock %}
 
+{% block header_title %}
+
+<h1 class="center-box special-title mt-2">Modifier la tâche</h1>
+
+{% endblock %}
+
 {% block header_img %}{% endblock %}
 
 {% block body %}
 
-    <div class="row center-box">
+    <div class="row center-box special-editor">
 
         {{ form_start(form, {'action' : path('task_edit', { 'id' : task.id })}) }}
 
