--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -4,7 +4,7 @@
 
 {% block header_title %}
 
-<h1 class="center-box special-title mt-2">Modifier <strong>{{ user.username }}</strong></h1>
+<h1 class="center-box special-title mt-2">Modifier l'utilisateur</h1>
 
 {% endblock %}
 
@@ -12,13 +12,13 @@
 
 {% block body %}
 
-    <div class="row center-box">
+    <div class="row center-box special-editor">
 
         {{ form_start(form, {'action' : path('user_edit', {'id' : user.id})}) }}
 
-        {{ form_widget(form) }}
+            {{ form_widget(form) }}
 
-        <button type="submit" class="btn btn-success">Modifier</button>
+            <button type="submit" class="btn btn-success">Modifier</button>
 
         {{ form_end(form) }}
 
