--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -12,6 +12,28 @@
 
 {% block body %}
 
+    {% if app.user and is_granted('ROLE_SUPER_ADMIN') %}
+
+        {% for user in users %}
+
+            {% if user.role == 'ROLE_ANONYMOUS' %}
+
+                <div class="center-box"> 
+
+                    <a href="{{ path('user_edit', {'id' : user.id}) }}" class="btn btn-success btn-sm">Modifier le compte anonyme</a>
+
+                    <a href="{{ path('user_delete', {'id' : user.id}) }}" class="btn btn-danger btn-sm" onclick="return(confirm('Validez-vous ce choix ?'));">Supprimer le compte anonyme</a>
+
+                    <div class="regular-spacer"></div>
+
+                </div>
+
+            {% endif %}
+
+        {% endfor %}
+
+    {% endif %}
+
     {% if users|length == 0 %}
 
         <div class="alert alert-warning" role="alert">
@@ -24,12 +46,12 @@
 
         <div class="row">
 
-            <table class="table">
+            <table class="table special-table">
 
-                <thead>
+                <thead class="special-table-header">
 
                     <tr>
-                        {# <th>#</th> #}
+
                         <th>Nom d'utilisateur</th>
 
                         <th>Rôle</th>
@@ -44,26 +66,25 @@
 
                 <tbody>
 
-                {% for user in users %}
-                    <!-- AJOUTÉ : EMPÊCHE L'ACCÈS AUX MODIFICATIONS DE L'UTILISATEUR ANONYME + DU MANAGER AVEC LE ROLE_SUPER_ADMIN + DU MEMBRE CONNECTÉ (QUI NE PEUT PAS MODIFIER SON PROPRE COMPTE) -->
-                    {% if (user.role != 'ROLE_SUPER_ADMIN') and (user.id != 2) and (app.user.id != user.id) %}
+                {% for user in users|slice(start, limit) %}
+                
+                    {% if (user.role != 'ROLE_SUPER_ADMIN') and (user.role != 'ROLE_ANONYMOUS') and (app.user.id != user.id) %}
                     <tr>
-                        {# <th scope="row">{{ loop.index }}</th> #}
+                    
                         <td>{{ user.username }}</td>
                         
-                        <!-- AJOUTÉ : INFORMATIONS SUR LES RÔLES -->
                         {% if user.role == 'ROLE_USER' %}
 
                             <td>
-                                <p>Utilisateur depuis le 
-                                <!-- AJOUTÉES : DATES DE CRÉATIONS ET MISE À JOUR -->
+                                <p>Utilisateur - 
+
                                 {% if user.freshDate is null %}
 
-                                    {{ user.createdAt|date('d/m/Y')|raw }}
+                                    Créé le {{ user.createdAt|date('d/m/Y H:i')|raw }}
 
                                 {% else %}
 
-                                    {{ user.freshDate|date('d/m/Y')|raw }}
+                                    Mis à jour le {{ user.freshDate|date('d/m/Y H:i')|raw }}
 
                                 {% endif %}
 
@@ -75,15 +96,15 @@
 
                             <td>
 
-                                <p>Administrateur depuis le
+                                <p>Administrateur -
 
                                 {% if user.freshDate is null %}
 
-                                    {{ user.createdAt|date('d/m/Y')|raw }}
+                                    Créé le {{ user.createdAt|date('d/m/Y H:i')|raw }}
 
                                 {% else %}
 
-                                    {{ user.freshDate|date('d/m/Y')|raw }}
+                                    Mis à jour le {{ user.freshDate|date('d/m/Y H:i')|raw }}
 
                                 {% endif %}
 
@@ -99,7 +120,7 @@
 
                             <a href="{{ path('user_edit', {'id' : user.id}) }}" class="btn btn-success btn-sm">Editer</a>
 
-                            <a href="{{ path('user_delete', {'id' : user.id}) }}" class="btn btn-danger btn-sm" onclick="return(confirm('Validez-vous ce choix ?'));">Supprimer</a>
+                            <a href="{{ path('user_delete', {'id' : user.id}) }}" class="btn btn-danger btn-sm" onclick="return(confirm('Validez-vous ce choix ?'));"><span class="glyphicon glyphicon-trash"></span></a>
 
                         </td>
 
@@ -115,6 +136,26 @@
 
         </div>
 
+        <div id="paging_links" class="center-box"> 
+        </div>
+
     {% endif %}
+
+{% endblock %}
+
+{% block javascripts %}
+{{ parent() }}
+
+<script src="{{ asset('module/paginate.js') }}"></script>
+
+<script>
+
+    firstLink({{ users|length }}, '{{ path('user_list') }}');
+
+    var nbr_links = Math.ceil({{ users|length }} / 10);
+
+    linksLoop(nbr_links, '{{ path('user_list') }}');
+
+</script>
 
 {% endblock %}
